--- a/src/index.css
+++ b/src/index.css
@@ -17,5 +17,16 @@ body,
 }
 
 body {
+  font-family:
+    Inter,
+    ui-sans-serif,
+    system-ui,
+    -apple-system,
+    Segoe UI,
+    Roboto,
+    Helvetica,
+    Arial,
+    'Apple Color Emoji',
+    'Segoe UI Emoji';
   @apply bg-white text-slate-900 antialiased;
 }
